# bmkgw-api

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  domain_list.json
.vim/: settings.json
src/: auth.rs  config.rs  cors.rs  error.rs  lib.rs  main.rs
src/routes/: cuaca.rs  gempa.rs  mod.rs
