[package]
name = "bmkgw-api"
version = "0.1.0"
authors = ["yapie <targaryen.akane@gmail.com>"]
edition = "2018"
default-run = "bmkgw-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
# xml-rs = "0.8"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = [ "derive" ] }
rocket = "0.4.5" 
rocket_contrib = "0.4.5"
bmkgw = { git = "https://gitlab.com/akane10/bmkgw", branch = "master" }
redis = "0.20.0"
dotenv = "0.15"
jsonwebtoken = "7.2.0"
chrono = "0.4.11"
rust-argon2 = "0.8.3"
