[package]
name = "bmkgw-api"
version = "0.1.0"
authors = ["yapie <targaryen.akane@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4", features = ["full"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = [ "derive" ] }
rocket = "0.4.5" 
rocket_contrib = "0.4.5"
bmkgw = { git = "https://gitlab.com/akane10/bmkgw", branch = "master" }
redis = "0.20.0"
